primer/sun_compile.log
In file included from ex12.cpp:5:
./ex12.h:13:31: warning: use of multiple declarators in a single using declaration is a C++17 extension [-Wc++17-extensions]
using std::vector, std::string;
                              ^
./ex12.h:40:16: error: incomplete result type 'StrBlobPtr' in function definition
    StrBlobPtr begin() {
               ^
./ex12.h:14:7: note: forward declaration of 'StrBlobPtr'
class StrBlobPtr;  // 先声明一下，不然后面找不到
      ^
./ex12.h:41:16: error: 'StrBlobPtr' is an incomplete type
        return StrBlobPtr(*this);
               ^
./ex12.h:14:7: note: forward declaration of 'StrBlobPtr'
class StrBlobPtr;  // 先声明一下，不然后面找不到
      ^
./ex12.h:44:16: error: incomplete result type 'StrBlobPtr' in function definition
    StrBlobPtr end() {
               ^
./ex12.h:14:7: note: forward declaration of 'StrBlobPtr'
class StrBlobPtr;  // 先声明一下，不然后面找不到
      ^
./ex12.h:45:16: error: invalid use of incomplete type 'StrBlobPtr'
        return StrBlobPtr(*this, data->size());
               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./ex12.h:14:7: note: forward declaration of 'StrBlobPtr'
class StrBlobPtr;  // 先声明一下，不然后面找不到
      ^
./ex12.h:60:55: error: no matching constructor for initialization of 'std::weak_ptr<vector<string>>' (aka 'weak_ptr<vector<basic_string<char>>>')
    StrBlobPtr(StrBlob& _wptr, size_type _curr = 0) : wptr(_wptr), curr(_curr) {};
                                                      ^    ~~~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/memory:4291:5: note: candidate constructor not viable: no known conversion from 'StrBlob' to 'const std::__1::weak_ptr<std::__1::vector<std::__1::basic_string<char>>>' for 1st argument
    weak_ptr(weak_ptr const& __r) _NOEXCEPT;
    ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/memory:4297:5: note: candidate constructor not viable: no known conversion from 'StrBlob' to 'std::__1::weak_ptr<std::__1::vector<std::__1::basic_string<char>>>' for 1st argument
    weak_ptr(weak_ptr&& __r) _NOEXCEPT;
    ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/memory:4287:51: note: candidate template ignored: could not match 'shared_ptr<type-parameter-0-0>' against 'StrBlob'
    template<class _Yp> _LIBCPP_INLINE_VISIBILITY weak_ptr(shared_ptr<_Yp> const& __r,
                                                  ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/memory:4292:51: note: candidate template ignored: could not match 'weak_ptr<type-parameter-0-0>' against 'StrBlob'
    template<class _Yp> _LIBCPP_INLINE_VISIBILITY weak_ptr(weak_ptr<_Yp> const& __r,
                                                  ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/memory:4298:51: note: candidate template ignored: could not match 'weak_ptr<type-parameter-0-0>' against 'StrBlob'
    template<class _Yp> _LIBCPP_INLINE_VISIBILITY weak_ptr(weak_ptr<_Yp>&& __r,
                                                  ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/memory:4286:23: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
    _LIBCPP_CONSTEXPR weak_ptr() _NOEXCEPT;
                      ^
In file included from ex12.cpp:5:
./ex12.h:63:19: error: function 'check' with deduced return type cannot be used before it is defined
        auto sp = check(curr, "out of bound");
                  ^
./ex12.h:78:10: note: 'check' declared here
    auto check(size_type _curr, const std::string &msg) const {
         ^
./ex12.h:68:9: error: function 'check' with deduced return type cannot be used before it is defined
        check(curr, "increment past end of StrBlobPtr");
        ^
./ex12.h:78:10: note: 'check' declared here
    auto check(size_type _curr, const std::string &msg) const {
         ^
1 warning and 7 errors generated.
In file included from ex12main.cpp:10:
./ex12.h:13:31: warning: use of multiple declarators in a single using declaration is a C++17 extension [-Wc++17-extensions]
using std::vector, std::string;
                              ^
./ex12.h:40:16: error: incomplete result type 'StrBlobPtr' in function definition
    StrBlobPtr begin() {
               ^
./ex12.h:14:7: note: forward declaration of 'StrBlobPtr'
class StrBlobPtr;  // 先声明一下，不然后面找不到
      ^
./ex12.h:41:16: error: 'StrBlobPtr' is an incomplete type
        return StrBlobPtr(*this);
               ^
./ex12.h:14:7: note: forward declaration of 'StrBlobPtr'
class StrBlobPtr;  // 先声明一下，不然后面找不到
      ^
./ex12.h:44:16: error: incomplete result type 'StrBlobPtr' in function definition
    StrBlobPtr end() {
               ^
./ex12.h:14:7: note: forward declaration of 'StrBlobPtr'
class StrBlobPtr;  // 先声明一下，不然后面找不到
      ^
./ex12.h:45:16: error: invalid use of incomplete type 'StrBlobPtr'
        return StrBlobPtr(*this, data->size());
               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./ex12.h:14:7: note: forward declaration of 'StrBlobPtr'
class StrBlobPtr;  // 先声明一下，不然后面找不到
      ^
./ex12.h:60:55: error: no matching constructor for initialization of 'std::weak_ptr<vector<string>>' (aka 'weak_ptr<vector<basic_string<char>>>')
    StrBlobPtr(StrBlob& _wptr, size_type _curr = 0) : wptr(_wptr), curr(_curr) {};
                                                      ^    ~~~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/memory:4291:5: note: candidate constructor not viable: no known conversion from 'StrBlob' to 'const std::__1::weak_ptr<std::__1::vector<std::__1::basic_string<char>>>' for 1st argument
    weak_ptr(weak_ptr const& __r) _NOEXCEPT;
    ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/memory:4297:5: note: candidate constructor not viable: no known conversion from 'StrBlob' to 'std::__1::weak_ptr<std::__1::vector<std::__1::basic_string<char>>>' for 1st argument
    weak_ptr(weak_ptr&& __r) _NOEXCEPT;
    ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/memory:4287:51: note: candidate template ignored: could not match 'shared_ptr<type-parameter-0-0>' against 'StrBlob'
    template<class _Yp> _LIBCPP_INLINE_VISIBILITY weak_ptr(shared_ptr<_Yp> const& __r,
                                                  ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/memory:4292:51: note: candidate template ignored: could not match 'weak_ptr<type-parameter-0-0>' against 'StrBlob'
    template<class _Yp> _LIBCPP_INLINE_VISIBILITY weak_ptr(weak_ptr<_Yp> const& __r,
                                                  ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/memory:4298:51: note: candidate template ignored: could not match 'weak_ptr<type-parameter-0-0>' against 'StrBlob'
    template<class _Yp> _LIBCPP_INLINE_VISIBILITY weak_ptr(weak_ptr<_Yp>&& __r,
                                                  ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/memory:4286:23: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
    _LIBCPP_CONSTEXPR weak_ptr() _NOEXCEPT;
                      ^
In file included from ex12main.cpp:10:
./ex12.h:63:19: error: function 'check' with deduced return type cannot be used before it is defined
        auto sp = check(curr, "out of bound");
                  ^
./ex12.h:78:10: note: 'check' declared here
    auto check(size_type _curr, const std::string &msg) const {
         ^
./ex12.h:68:9: error: function 'check' with deduced return type cannot be used before it is defined
        check(curr, "increment past end of StrBlobPtr");
        ^
./ex12.h:78:10: note: 'check' declared here
    auto check(size_type _curr, const std::string &msg) const {
         ^
1 warning and 7 errors generated.
